[package]
name = "cloud-jumper"
version = "0.1.0"
edition = "2021"
authors = ["Hayden Sip <hsipper@icloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
bevy = { version = "0.12.1" }

[target.'cfg(unix)'.dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_ecs = "0.12.1"
compute = "0.2.3"
