[package]
name = "cloud-jumper"
version = "0.1.0"
edition = "2021"
authors = ["Hayden Sip <hsipper@icloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
bevy = { version = "0.13" }

[target.'cfg(unix)'.dependencies]
bevy = { version = "0.13", features = ["dynamic_linking", "wayland"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_asset = "0.13.2"
bevy_ecs = "0.13"
bevy_reflect = "0.13.2"
bevy_render = "0.13.2"
compute = "0.2.3"
rand = "0.8.5"
