[package]
name = "cloud-jumper"
version = "0.1.0"
edition = "2021"
authors = ["Hayden Sip <hsipper@icloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
bevy = { version = "0.16" }

[target.'cfg(unix)'.dependencies]
bevy = { version = "0.16", features = ["dynamic_linking", "wayland"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_asset = "0.16.0"
bevy_ecs = "0.16"
bevy_image = { version = "0.16.0", features = ["png"]}
bevy_reflect = "0.16.0"
bevy_render = "0.16.0"
compute = "0.2.3"
rand = "0.9.1"
